--- a/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
+++ b/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
@@ -1,3 +1,67 @@
-<div>
-    esto es la pangina de inicio
+<div class="contenedorDitesi fdc fac">
+
+    <div class="fdc fac">
+      <h2>Portal de Sistemas Informáticos FCE</h2>
+      <div class="contenedorLogos fdr fac">
+        <div><img src="img/logo_fce.png"></div>
+        <div><img src="img/logo_unlp.png"></div>
+      </div>
+    </div>
+
+    <div class="contenedorSistemas fac">
+
+        <div class="btnSistema btn1">
+          <div><i class="fa fa-user fa-4x" aria-hidden="true"></i></div>
+          <div>Editar Perfil</div>
+        </div>
+
+        <div class="btnSistema btn2">
+          <div><i class="fa fa-google fa-4x" aria-hidden="true"></i></div>
+          <div>Correo</div>
+        </div>
+
+        <div class="btnSistema btn3">
+          <div><i class="fa fa-cloud fa-4x" aria-hidden="true"></i></div>
+          <div>Drive</div>
+        </div>
+
+        <div class="btnSistema btn4">
+          <div><i class="fa fa-clock-o fa-4x" aria-hidden="true"></i></div>
+          <div>Asistencia</div>
+        </div>
+
+        <div class="btnSistema btn5">
+          <div><i class="fa fa-ticket fa-4x" aria-hidden="true"></i></div>
+          <div>Pedidos</div>
+        </div>
+
+        <div class="btnSistema btn6">
+          <div><i class="fa fa-dashcube fa-4x" aria-hidden="true"></i></div>
+          <div>Digesto</div>
+        </div>
+
+        <div class="btnSistema btn7">
+          <div><i class="fa fa-briefcase fa-4x" aria-hidden="true"></i></div>
+          <div>Inser. Laboral</div>
+        </div>
+
+        <div class="btnSistema btn8">
+          <div><i class="fa fa-file-text fa-4x" aria-hidden="true"></i></div>
+          <div>Tutorias</div>
+        </div>
+
+        <div class="btnSistema btn9">
+          <div><i class="fa fa-scribd fa-4x" aria-hidden="true"></i></div>
+          <div>Sileg</div>
+        </div>
+
+        <div class="btnSistema btn10">
+          <div><i class="fa fa-graduation-cap fa-4x" aria-hidden="true"></i></div>
+          <div>AU24</div>
+        </div>
+
+
+
+    </div>
+
 </div>
