--- a/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
+++ b/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
@@ -1,7 +1,9 @@
 <div class="contenedorDitesi fdc fac">
 
-    <div class="fdc fac">
-      <h2>Portal de Sistemas Informáticos FCE</h2>
+    <div class="contenedorCabecera fdr fac fjc">
+      <div class="titulos fdr fac">
+        <div><b>FCE</b> | Aplicaciones</div>
+      </div>
       <div class="contenedorLogos fdr fac">
         <div><img src="img/logo_fce.png"></div>
         <div><img src="img/logo_unlp.png"></div>
