--- a/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
+++ b/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
@@ -1,68 +1,126 @@
 <div class="contenedorDitesi fdc fac">
 
-    <div class="contenedorCabecera fdr fac fjc">
-      <div class="titulos fdr fac">
-        <div><b>FCE</b> | Aplicaciones</div>
-      </div>
-      <div class="contenedorLogos fdr fac">
-        <div><img src="img/logo_fce.png"></div>
-        <div><img src="img/logo_unlp.png"></div>
-      </div>
+    <div class="subTitulos">
+      <h4>PORTAL DE APLICACIONES</h4>
+
+      <b>Aplicaciones</b> | Facultad de Ciencias Económicas
     </div>
 
     <div class="contenedorSistemas fac">
 
-        <div class="btnSistema btn1">
+        <a href="http://www.usuarios.econo.ulp.edu.ar" target="_blank">
+        <div type="button" class="btnSistema btn1" >
           <div><i class="fa fa-user fa-4x" aria-hidden="true"></i></div>
           <div>Editar Perfil</div>
         </div>
+        </a>
+        <!-- <button type="button" name="button"></button> -->
 
+        <a href="https://www.google.com/gmail/" target="_blank">
         <div class="btnSistema btn2">
           <div><i class="fa fa-google fa-4x" aria-hidden="true"></i></div>
           <div>Correo</div>
         </div>
+        </a>
 
+        <a href="https://drive.google.com/" target="_blank">
         <div class="btnSistema btn3">
           <div><i class="fa fa-cloud fa-4x" aria-hidden="true"></i></div>
           <div>Drive</div>
         </div>
+        </a>
 
+        <a href="http://www.asistencia.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn4">
           <div><i class="fa fa-clock-o fa-4x" aria-hidden="true"></i></div>
           <div>Asistencia</div>
         </div>
+        </a>
 
+        <a href="http://www.pedidos.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn5">
           <div><i class="fa fa-ticket fa-4x" aria-hidden="true"></i></div>
           <div>Pedidos</div>
         </div>
+        </a>
 
+        <a href="http://digesto.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn6">
           <div><i class="fa fa-dashcube fa-4x" aria-hidden="true"></i></div>
           <div>Digesto</div>
         </div>
+        </a>
 
+        <a href="http://insercionlaboral.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn7">
           <div><i class="fa fa-briefcase fa-4x" aria-hidden="true"></i></div>
           <div>Inser. Laboral</div>
         </div>
+        </a>
 
+        <a href="http://tutorias.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn8">
           <div><i class="fa fa-file-text fa-4x" aria-hidden="true"></i></div>
           <div>Tutorias</div>
         </div>
+        </a>
 
+        <a href="http://sileg.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn9">
           <div><i class="fa fa-scribd fa-4x" aria-hidden="true"></i></div>
           <div>Sileg</div>
         </div>
+        </a>
 
+        <a href="http://adscriptos.econo.unlp.edu.ar" target="_blank">
+        <div class="btnSistema btn14">
+          <div><i class="fa fa-audio-description fa-4x" aria-hidden="true"></i></div>
+          <div>Adscriptos</div>
+        </div>
+        </a>
+
+        <a href="https://163.10.17.11:7443/login" target="_blank">
+        <div class="btnSistema btn15">
+          <div><i class="fa fa-video-camera fa-4x" aria-hidden="true"></i></div>
+          <div>Seguridad</div>
+        </div>
+        </a>
+
+        <a href="http://www.au24.econo.unlp.edu.ar" target="_blank">
         <div class="btnSistema btn10">
           <div><i class="fa fa-graduation-cap fa-4x" aria-hidden="true"></i></div>
           <div>AU24</div>
         </div>
+        </a>
 
+    </div>
 
+    <div class="subTitulos">
+      <b>Aplicaciones</b> | Universidad Nacional de La Plata
+    </div>
+
+    <div class="contenedorSistemas fac">
+
+        <a href="https://www.guarani-economicas.unlp.edu.ar" target="_blank">
+        <div class="btnSistema btn11">
+          <div><i class="fa fa-glide fa-4x" aria-hidden="true"></i></div>
+          <div>SIU Guaraní</div>
+        </div>
+        </a>
+
+        <a href="http://catalogo.econo.unlp.edu.ar" target="_blank">
+        <div class="btnSistema btn13">
+          <div><i class="fa fa-book fa-4x" aria-hidden="true"></i></div>
+          <div>Biblioteca</div>
+        </div>
+        </a>
+
+        <a href="https://acceso.unlp.edu.ar" target="_blank">
+        <div class="btnSistema btn12">
+          <div><i class="fa fa-money fa-4x" aria-hidden="true"></i></div>
+          <div>Rec. de Sueldo</div>
+        </div>
+        </a>
 
     </div>
 
