--- a/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
+++ b/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
@@ -8,7 +8,7 @@
 
     <div class="contenedorSistemas fac">
 
-        <a href="http://www.usuarios.econo.ulp.edu.ar" target="_blank">
+        <a href="http://usuarios.econo.unlp.edu.ar" target="_blank">
         <div type="button" class="btnSistema btn1" >
           <div><i class="fa fa-user fa-4x" aria-hidden="true"></i></div>
           <div>Editar Perfil</div>
