Acomode el codigo del sistema FCE antes de pasarlo a producion

--- a/docker/src/ditesi/web/privado/componentes/ditesi/style.css
+++ b/docker/src/ditesi/web/privado/componentes/ditesi/style.css
@@ -5,7 +5,7 @@
 .ditesi .contenedorDitesi {
   height: 100%;
   /*background-color: red;*/
-  background-image: url(fondo2.jpg);
+  background-image: url(/privado/img/fondo_inicio.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
 
