cambie el link de pedidos para que vaya al sitio correcto

--- a/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
+++ b/docker/src/ditesi/web/privado/componentes/ditesi/templates/inicio.html
@@ -37,7 +37,7 @@
         </div>
         </a>
 
-        <a href="http://www.pedidos.econo.unlp.edu.ar" target="_blank">
+        <a href="http://issues.econo.unlp.edu.ar/privado/index.html" target="_blank">
         <div class="btnSistema btn5">
           <div><i class="fa fa-ticket fa-4x" aria-hidden="true"></i></div>
           <div>Pedidos</div>
